feat: added the adaptive of sections(contacts,summar)

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,25 @@ overflow: clip;
     letter-spacing: 5px;
     color: #829985;
 }
+@media (max-width: 991.98px) {
+    .title_text {
+        font-size: 18px;
+    }
+}
+
+@media (max-width:767.98px) {
+    .body_box__conteiner {
+        display:flex;
+        flex-direction: column;
+    }
+    .sections {
+        width: 100%;
+    }
+    .title_text {
+        text-align: center;
+        font-size: 17px; 
+    }
+}
 /*-----------------------------------------*/
 /*Header*/
 /*-----------------------------------------*/
@@ -51,6 +70,7 @@ overflow: clip;
     top: 0;
     left: 0;
     background-color: #4c9173;
+    z-index: 3;
 }
 
 .header__conteiner {
@@ -62,6 +82,14 @@ overflow: clip;
 }
 .header_menu {
     flex: 1 1 auto;
+}
+.header_img {
+    width: 30px;
+    border: 1px solid #4c9173;
+    border-radius: 50%;
+}
+.header_logo {
+    
 }
 .menu_list {
     display:flex;
@@ -86,6 +114,111 @@ overflow: clip;
 .icon-menu {
     display:none;
 }
+@media (max-width: 991.98px){
+    .header__conteiner,
+    .menu_list{
+        column-gap:25px;
+    }
+    .header__conteiner {
+     min-height: 80px;
+  }
+}
+@media (max-width: 767.98px){
+
+ .icon-menu {
+     display: block;
+     flex: 0 0 30px;
+     height: 18px;
+     position: relative;
+     z-index: 5;
+     background-color: #4c9173;
+ }
+ .icon-menu span,
+ .icon-menu::before,
+ .icon-menu::after {
+     content: "";
+     right: 0;
+     position: absolute;
+     width: 100%;
+     height: 3px;
+     background-color: #fcf9f4;
+     transition: all 0.3s ease 0s;
+ }
+ .icon-menu::before {
+     top:0;
+    
+ }
+ .icon-menu::after {
+     bottom:0;
+     
+ }
+ .icon-menu span {
+     top: calc(50% - 2px);
+     background-color:#fcf9f4;
+ }
+ .menu-open .icon-menu {
+    width: 0; 
+    background-color: #fcf9f4;
+    
+ }
+ .menu-open .icon-menu::before {
+     top: calc(50% - 2px);
+     transform: rotate(-45deg);
+     background-color:#4c9173;    
+ }
+
+ .menu-open .icon-menu::after {
+     bottom: calc(50% - 2px);
+     transform: rotate(45deg);
+     background-color:#4c9173;
+    }
+ 
+ .menu_body {
+     position: fixed;
+     width: 100%;
+     height: 100%;
+     background-color: #fcf9f4;
+     left:-100%;
+     top:0;
+     padding: 100px 15px 30px 15px;
+     overflow: auto;
+     transition: left 0.3s ease 0s;
+ }
+ .menu_body::before {
+     content: "";
+     width: 100%;
+     position: fixed;
+     top:0;
+     left:-100%;
+     height: 70px;
+     background-color: #fcf9f4;
+     z-index: 2;
+     transition: left 0.3s ease 0s;
+ }
+ .menu_list {
+     flex-direction: column;
+     justify-content: center;
+     row-gap: 10px;
+     text-align: center;  
+ }
+  .menu_link {
+     font-size: 32px;
+     font-weight: 500;
+     color:#906387;
+  }
+  .menu_link:hover {
+    text-decoration: underline;
+  }
+  .header__conteiner {
+     min-height: 70px;
+  }
+ 
+ }
+ .menu-open .menu_body,
+ .menu-open .menu_body::before {
+     left: 0;
+
+ }
 /*--------------------------------------------------*/
 /*main section*/
 /*--------------------------------------------------*/
@@ -96,7 +229,7 @@ overflow: clip;
   
   .section {
     width: 50%;
-    color:black
+    color:black;
   }
 
   .img_profile {
@@ -158,14 +291,59 @@ overflow: clip;
     font-weight: 300;
     letter-spacing: 2px;
 }
+@media (max-width: 991.91px){ 
+.page {
+    padding-top: 100px;
+}
+.profile__conteiner {
+    border-bottom: 15px solid #906387;
+}
+.img_profile {
+    width:180px;
+    height:180px;
+}
+.profile_page {
+    padding: 10px 25px 30px;
+}
+.profile__conteiner {
+    padding-bottom: 25px;
+}
+.title_name {
+    font-size: 30px;
+}
+.profile_vocation {
+    font-size: 16px;
+}
+}
 
+@media (max-width: 767.98px){
+    .page {
+        padding-top:80px;
+    }
+    .title_name::before {
+        left:55px;
+        margin-top: 25px; 
+    }
+    .profile__conteiner {
+        padding-bottom: 25px;
+    }
+    .profile_name {
+        margin-top: 10px;
+    }
+    .title_name {
+        margin-bottom: 15px;
+    }
+    .profile_vocation {
+        font-size: 14px;
+    }
+}
 /*----------------------------------------------*/
 /*contacts section*/
 /*----------------------------------------------*/
 
 .contacts_page {
     border-bottom: 1px solid #672f2f;
-    padding: 0 10px 35px 10px;
+    padding: 0 10px 30px 10px;
 }
 
 .contacts_item {
@@ -211,14 +389,30 @@ overflow: clip;
 .contacts_link:hover {
     color:#4d2323;
 }
+@media (max-width:991.98px){
+    .contacts_item {
+        font-size: 16.5px;
+    }
+    .contacts_item:not(:last-child) {
+        margin-top:14px;
+    }
+}
 
+@media (max-width: 767.98px){
+    .contacts_item {
+        font-size: 15px;
+    } 
+    .contacts_item:not(:last-child) {
+        margin-top: 12px;
+    }
+}
 /*--------------------------------------------*/
 /*summary section*/
 /*--------------------------------------------*/
 
 .summary_page {
     border-bottom: 1px solid #672f2f;
-    padding: 0 10px 35px 10px;
+    padding: 0 10px 30px 10px;
 }
 
 .summary_paragraph {
@@ -227,7 +421,17 @@ overflow: clip;
     line-height: 1.5;
     color: #4d2323;
   }
-
+  @media (max-width: 991.98px){
+    .summary_paragraph {
+        font-size: 15px;
+    }
+  }
+@media (max-width: 767.98px){
+    .summary_paragraph {
+        text-align: center;
+        font-size: 15px;
+    }
+}
   /*--------------------------------------------*/
   /*skills section*/
   /*--------------------------------------------*/
@@ -280,7 +484,14 @@ overflow: clip;
     line-height: 1.5;
     color: #4d2323;   
 }
-
+@media (max-width: 767.98px){
+    .pre {
+        position: relative;
+        right:90px;
+        font-size: 15px;
+       
+    }
+}
 /*------------------------------------------------*/
 /*Courses section*/
 /*-------------------------------------------------*/
