fix: in the summary section fix the padding-top

--- a/src/style.css
+++ b/src/style.css
@@ -431,6 +431,9 @@ overflow: clip;
         text-align: center;
         font-size: 15px;
     }
+    .summary_page {
+        padding-top:25px;
+    }
 }
   /*--------------------------------------------*/
   /*skills section*/
